Fix logo being too small on mobile and auto-close menu if on mobile.

--- a/app/static/css/sb-admin-2.css
+++ b/app/static/css/sb-admin-2.css
@@ -1671,6 +1671,10 @@ pre code {
   .table-responsive-md > .table-bordered {
     border: 0;
   }
+  .mx-4 {
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+  }
 }
 
 @media (max-width: 991.98px) {
@@ -7524,7 +7528,7 @@ button.bg-dark:focus {
 
 .mr-4,
 .mx-4 {
-  margin-right: 1.5rem !important;
+  margin-right: 1.5rem;
 }
 
 .mb-4,
@@ -7534,7 +7538,7 @@ button.bg-dark:focus {
 
 .ml-4,
 .mx-4 {
-  margin-left: 1.5rem !important;
+  margin-left: 1.5rem;
 }
 
 .m-5 {
